assets/css/main.css
/* ... */
#nav a span:after {
	content: '';
	display: block;
	position: absolute;
	bottom: -0.6em;
	left: 50%;
	margin-left: -0.6em;
	border-top: solid 0.6em #0003c981;
	border-left: solid 0.6em transparent;
	border-right: solid 0.6em transparent;
}

#nav a:hover {
	opacity: 1.0;
}

#nav a:hover span {
	opacity: 1.0;
}

#nav a.active {
	opacity: 1.0;
}

#nav a.active:after {
	border-bottom-width: 0.5em;
}

@media screen and (max-width: 980px) {

	#nav a span {
		display: none;
	}

}

/* Wrapper */

#wrapper {
	width: 45em;
	margin: 0 auto;
	min-height: 100vh;
	max-width: 100%;
	padding: 4em 0;
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	-moz-flex-direction: column;
	-webkit-flex-direction: column;
	-ms-flex-direction: column;
	flex-direction: column;
	-moz-align-items: center;
	-webkit-align-items: center;
	-ms-align-items: center;
	align-items: center;
	-moz-justify-content: center;
	-webkit-justify-content: center;
	-ms-justify-content: center;
	justify-content: center;
	-moz-transition: opacity 1s ease-in-out;
	-webkit-transition: opacity 1s ease-in-out;
	-ms-transition: opacity 1s ease-in-out;
	transition: opacity 1s ease-in-out;
}

body.is-preload #wrapper {
	opacity: 0;
}

@media screen and (max-width: 1280px) {

	#wrapper {
		padding: 3em 0;
		max-width: calc(100% - 6em);
	}

}

@media screen and (max-width: 980px) {

	#wrapper {
		padding: 1.5em 0;
		max-width: calc(100% - 8em);
	}

}

@media screen and (max-width: 736px) {

	#wrapper {
		padding: 1em 0;
		max-width: calc(100% - 2em);
	}

}

@media screen and (max-width: 360px) {

	#wrapper {
		padding: 1em 0;
		max-width: 100%;
	}

}

/* Main */

#main {
	position: relative;
	overflow: hidden;
	box-shadow: 1.8px 3.5px 3.5px hsl(0deg 0% 0% / 0.45);
	width: 100%;
	background: #ffffffbf;
	border-radius: 10px;
	-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	-webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	-ms-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
}

#main>.panel {
	-moz-transition: opacity 0.25s ease-in-out;
	-webkit-transition: opacity 0.25s ease-in-out;
	-ms-transition: opacity 0.25s ease-in-out;
	transition: opacity 0.25s ease-in-out;
	margin-bottom: 0;
	position: relative;
	padding: 3.5em 2.5em 2.5em 2.5em;
	width: 100%;
}

#main>.panel.inactive {
	opacity: 0;
}

@media screen and (max-width: 736px) {

	#main>.panel {
		padding: 2em 1.5em 1.5em 1.5em;
	}

}

#main>.panel.intro {
	padding: 0;
	height: 20em;
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	-moz-flex-direction: row;
	-webkit-flex-direction: row;
	-ms-flex-direction: row;
	flex-direction: row;
	-moz-align-items: center;
	-webkit-align-items: center;
	-ms-align-items: center;
	align-items: center;
}

#main>.panel.intro .pic {
	text-decoration: none;
	position: relative;
	-moz-flex-grow: 0;
	-webkit-flex-grow: 0;
	-ms-flex-grow: 0;
	flex-grow: 0;
	-moz-flex-shrink: 0;
	-webkit-flex-shrink: 0;
	-ms-flex-shrink: 0;
	flex-shrink: 0;
	width: 17em;
	height: 100%;
}

#main>.panel.intro .pic:before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	background: url("images/overlay.png");
	width: 100%;
	height: 100%;
	z-index: 1;
}

#main>.panel.intro .pic img {
	position: relative;
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	-moz-object-fit: cover;
	-webkit-object-fit: cover;
	-ms-object-fit: cover;
	object-fit: cover;
	-moz-object-position: center;
	-webkit-object-position: center;
	-ms-object-position: center;
	object-position: center;
}

#main>.panel.intro .pic .arrow {
	display: block;
	position: absolute;
	right: 0;
	top: 50%;
	margin-top: -1.375em;
	width: 2.75em;
	height: 2.75em;
	background: #04048365;
	border-top-left-radius: 6px;
	border-bottom-left-radius: 6px;
	color: #ffffff;
	text-align: center;
	line-height: 2.75em;
	font-size: 1.5em;
	z-index: 1;
	-moz-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
	-webkit-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
	-ms-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
	transition: width .15s ease-in-out, padding-right .15s ease-in-out;
}

#main>.panel.intro .pic .arrow:before {
	position: relative;
	padding-right: 0;
	top: 0.125em;
}

#main>.panel.intro .pic .arrow span {
	display: block;
	text-indent: -9999px;
}

#main>.panel.intro .pic:hover .arrow {
	width: 3em;
	padding-right: 0.25em;
}

#main>.panel.intro header {
	-moz-flex-grow: 1;
	-webkit-flex-grow: 1;
	-ms-flex-grow: 1;
	flex-grow: 1;
	-moz-flex-shrink: 1;
	-webkit-flex-shrink: 1;
	-ms-flex-shrink: 1;
	flex-shrink: 1;
	padding: 3.5em 2.5em;
	margin-bottom: 0;
	width: 100%;
}

#main>.panel.intro header h1 {
	line-height: 1.25em;
	margin-bottom: 0;
}

#main>.panel.intro header span {
	color: rgb(32, 54, 255);
	font-weight: bold;
}

#main>.panel.intro header .title {
	font-size: 2rem;
	color: rgb(15, 0, 125);
	margin-bottom: 15px;
}

#main>.panel.intro header p {
	letter-spacing: -0.015em;
	font-size: 1.25em;
	margin: 0.25em 0 0 0;
	color: rgb(33, 33, 33);
}

#main>.panel.intro header .title+p {
	text-align: justify;
}

@media screen and (max-width: 980px) {

	#main>.panel.intro {
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
		height: auto;
	}

	#main>.panel.intro .pic {
		height: 25em;
		width: 100%;
	}

	#main>.panel.intro header {
		padding: 4em;
		text-align: center;
	}

}

@media screen and (max-width: 736px) {

	#main>.panel.intro .pic {
		height: 20em;
	}

	#main>.panel.intro header {
		padding: 2.75em 2em 2.5em 2em;
	}

	#main>.panel.intro header p {
		font-size: 1em;
		margin: 0.25em 0 0 0;
	}

}

/* Footer */

#footer {
	color: rgba(255, 255, 255, 0.45);
	text-align: center;
	padding: 2em 0 0 0;
	font-size: 0.75em;
}
/* ... */

